# ingCaracteristicasProyecto_

./: .dvcignore  .gitignore  LICENSE  Makefile  README.md  interim-salud-mental-adul-ydata-report.html  pyproject.toml  requirements.txt
docs/: README.md  mkdocs.yml
helpers/: setup_env.bat  setup_env.sh
ingcaracteristicasproyecto/: __init__.py  dataset.py  features.py  plots.py
models/: modelo_vivienda.ipynb
notebooks/: 0.00_fct_georeferential_data_download.ipynb  0.01_fct_enigh_download.ipynb  00_kgm_data_and_cat_MH_download.ipynb  1.00_fct_education_data_cleaning.ipynb  1.00_kgm_MH_data_adol_interim.ipynb  1.00_kgm_MH_data_adul_interim.ipynb  1.01_fct_education_join_data.ipynb  1.01_kgm_MH_join_data.ipynb  1.02_fct_enigh_dataset.ipynb  1.03_fct_enigh_dataset_interim.ipynb  2.00_fct_enigh_dataset_exploration_graphs.ipynb  2.01_2_kgm_categories.ipynb  2.01_fct_ccpv_autoeda.ipynb  2.01_fct_enigh_autoeda.ipynb  2.01_fct_enigh_dataset_exploration_missing data.ipynb  2.01_kgm_data_types.ipynb  2.02_fct_enigh_graphs.ipynb  2.02_kgm_missing_data_and_outliers-Copy1.ipynb  2.02_kgm_missing_data_and_outliers.ipynb  2.03_fct_enigh_outliers.ipynb  2.04_fct_ccpv_graphs.ipynb  2.04_kgm_Formated_Data.ipynb  2.05_fct_enigh_graphs.ipynb  2.05_kgm_dashboard.ipynb  2.06_fct_enigh_bills.ipynb  2.07_fct_dashboard_graphs.ipynb  README.md  analisis_descritivo_vivienda.ipynb  calidad_datos_cirett.ipynb  descarga_datos_georeferenciales.ipynb
references/: Catalogo_Ensanut_data_p.csv
scripts/: Ydata-SweetViz-datasets.py  Ydata-datasets.py  dashboard.py  ed-download-data.py  (+5 more)
(+25 files in other folders)
