[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ingcaracteristicasproyecto"
version = "0.0.1"
description = "Proyecto de ingenier\u00eda de caracter\u00edsticas 2024-2 EDUCACI\u00d3N Y SALUD MENTAL"
authors = [
  { name = "Sebasti\u00e1n Isaac Vega Robles , Federico Cirett Torres , Kevin Garcia Mundo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ingcaracteristicasproyecto"]
force_sort_within_sections = true
